apps/web/drupal/dr7nav/k8s/drupal-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal
  labels:
    app: drupal
spec:
  type: LoadBalancer
  #loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: drupal
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: drupal
  labels:
    app: drupal
spec:
  replicas: 3
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
#      annotations:
#        pod.alpha.kubernetes.io/init-containers: '[
#        {
#          "name": "jenkins-init",
#          "image": "busybox",
#          "imagePullPolicy": "IfNotPresent",
#          "command": ["sh", "-c", "chown -R 33:33 /var/www/html/sites/default/files"],
#          "volumeMounts": [
#            {
#              "name": "drupal-persistent-storage",
#              "mountPath": "/var/www/html/sites/default/files"
#            }
#          ]
#        }
#        ]'
    spec:
      securityContext:
        fsGroup: 33
        #runAsUser: 33
      containers:
      - image: jayachandranm/dr7nav:1.3
        name: drupal
        ports:
        - containerPort: 80
          name: drupal
        #volumeMounts:
        #- name: drupal-persistent-storage
        #  mountPath: /var/www/html/sites/default/files
          #mountPath: /var/www/html/sites/default/files/styles
      volumes:
      - name: drupal-persistent-storage
        #gcePersistentDisk:
        #  pdName: drupal-disk
        #  fsType: ext4
        persistentVolumeClaim:
          claimName: nfs
